--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ COMPUTE_UNIT_LIMIT=1200000
 JITO_ENABLED=false
 PUMP_PORTAL_URL=wss://pumpportal.fun/api/data
 LOG_LEVEL=info
+PUMP_TRADE_LOCAL_URL=https://pumpportal.fun/api/trade-local
+PORTAL_SLIPPAGE_PCT=10
+PORTAL_PRIORITY_FEE_SOL=0.00001
+PORTAL_POOL=pump
