--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ PUMP_TRADE_LOCAL_URL=https://pumpportal.fun/api/trade-local
 PORTAL_SLIPPAGE_PCT=10
 PORTAL_PRIORITY_FEE_SOL=0.00001
 PORTAL_POOL=pump
+TELEGRAM_BOT_TOKEN=8556944704:AAEhVVvjt_Bc3u4HI4TBpzsLfsjtrMYL20
+TELEGRAM_ADMIN_CHAT_ID=5689900941
+
+DRY_RUN=true
+ENABLE_LIVE_TRADING=false
