Update .env configuration for trading settings

--- a/.env
+++ b/.env
@@ -1,29 +1,34 @@
 RPC_URLS=https://api.mainnet-beta.solana.com
-ENABLE_LIVE_TRADING=false
+
 DRY_RUN=true
+ENABLE_LIVE_TRADING=false
+
 BASE_SIZE_SOL=0.4
 MAX_TRADE_SOL=0.75
 MAX_OPEN_POSITIONS=3
 MAX_TOTAL_EXPOSURE_SOL=1.2
+
 STOP_LOSS_PCT=0.25
 TIME_STOP_SEC=120
 TP_LADDER_JSON=[{"pct":0.25,"profit":0.3},{"pct":0.25,"profit":0.6},{"pct":0.25,"profit":1.0}]
 TRAIL_MODE=volatility
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_ADMIN_CHAT_ID=
+
+KEYPAIR_PATH=C:\Users\Michael\.config\solana\id.json
+MIN_SOL_BALANCE=0
+
 SQLITE_PATH=bot.db
-PRIORITY_FEE_MICRO_LAMPORTS=5000
-COMPUTE_UNIT_LIMIT=1200000
-JITO_ENABLED=false
+
 PUMP_PORTAL_URL=wss://pumpportal.fun/api/data
-LOG_LEVEL=info
 PUMP_TRADE_LOCAL_URL=https://pumpportal.fun/api/trade-local
 PORTAL_SLIPPAGE_PCT=10
 PORTAL_PRIORITY_FEE_SOL=0.00001
 PORTAL_POOL=pump
+
+PRIORITY_FEE_MICRO_LAMPORTS=5000
+COMPUTE_UNIT_LIMIT=1200000
+JITO_ENABLED=false
+
+LOG_LEVEL=info
+
 TELEGRAM_BOT_TOKEN=8556944704:AAEhVVvjt_Bc3u4HI4TBpzsLfsjtrMYL20
 TELEGRAM_ADMIN_CHAT_ID=5689900941
-
-DRY_RUN=true
-ENABLE_LIVE_TRADING=false
-KEYPAIR_PATH=C:\Users\Michael\.config\solana\id.json
